add some feature